# echofist

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_en.md  README_ja.md  README_zh.md  pyproject.toml  requirements-dev.txt  requirements.txt  seed_kiwi_memory.py  test_audio.py  test_kiwi_connection.py
.github/workflows/: ci.yml
.trae/rules/: boundary_constraints.md  development_guide.md  project_rules.md  validation_script.py
docs/: README.md  hosting_feasibility_micpet.md  public_resource_service_system.md
docs/kiwisdr/: README.md
echofist/: __init__.py  __main__.py  config.py  logger.py
echofist/core/: __init__.py  audio_generation.py  audio_playback.py  audio_processor.py  fist_extractor.py  kiwi_client.py  kiwi_source_service.py  kiwi_sources.py  morse_decoder.py  qso_state.py
echofist/ui/: __init__.py  dashboard.py  i18n.py  i18n.toml
echofist/utils/: __init__.py
tests/: test_audio_player.py  test_kiwi_sources_registry.py
